# umbra-lyrics

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.lyrics-proxy.ts  wrangler.jsonc  wrangler.legacy.jsonc  wrangler.rust.local.jsonc
.impeccable/: design.json
docs/: RUBRIC.md  design-mode-session.md
rust-worker/: Cargo.toml
rust-worker/src/: lib.rs  lyrics.rs  metadata.rs  native_lyrics.rs  observability.rs  resolution.rs  result_cache.rs  task10.rs  task8.rs  task9.rs
rust-worker/tests/: routing.rs
scripts/: benchmark-legacy-lyrics-lib.mjs  benchmark-legacy-lyrics.mjs  benchmark-lyrics-browser.mjs  benchmark-lyrics-comparison.mjs  benchmark-rust-lyrics-lib.mjs  benchmark-rust-lyrics.mjs  benchmark-transcription.mjs  copy-useanimations-icons.mjs  debug-search-opsec-chrome.mjs  debug-search-opsec.mjs  debug-search-workers.mjs  debug-search.mjs  deploy-wrangler-logic.mjs  deploy-wrangler.mjs  diagnose-lyric-visual.mjs  diagnose-lyrics-display.mjs  diagnose-not-like-us.mjs  fix-dns.mjs  generate-icon-registry.mjs  icon-useanim-map.mjs  prepare-wrangler-deploy.mjs  record-demo.mjs  record-lyrics-before-after.mjs  record-lyrics-demo.mjs  smoke-rust-worker-deployed.mjs  smoke-rust-worker.mjs  sync-tinted-themes.mjs  test-orchestrator-live.mjs  verify-lyrics-demo.mjs  verify-search-prod.mjs
src/: App.tsx  index.css  main.tsx
tests/: raw-imports.d.ts  scaffold.test.ts  setup.ts
worker/: cors.ts  headers.ts  index.ts  router.ts
(+675 files in other folders)
