[package]
name = "umbra-rust-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["js", "v4"] }
worker = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
