[package]
name = "umbra-rust-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
futures-util = "0.3"
http = "1"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["js", "v4"] }
worker = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
# Keep debug symbols only: `strip = true` drops the wasm `target_features`
# section that wasm-bindgen needs for externref/catch wrappers.
strip = "debuginfo"
